--- a/style.css
+++ b/style.css
@@ -28,19 +28,20 @@ body {
   float: right;
 }
 .menu li a {
-  color: #333;
+  color: #fff;
   text-decoration: none;
   padding: 5px 10px;
   margin-top: 20px;
   display: block;
+  align-items: center;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 700;
   font-size: 13px;
   margin-right: 60px;
 }
 .menu li a:hover {
-  background: #333;
-  color: whitesmoke;
+  text-decoration: underline overline;
+  color: #fff;
   font-size: 13px;
   -moz-box-shadow: 0 3px 10px 0 #ccc;
   -webkit-box-shadow: 0 3px 10px 0 #ccc;
@@ -52,7 +53,7 @@ body {
   background-color: white;
   display: none;
   margin-bottom: 50px;
-  color: #333;
+  color: #fff;
 }
 .menu li:hover ul,
 .menu li.over ul {
@@ -62,4 +63,49 @@ body {
   /* border: 1px solid #c0c0c0;*/
   display: block;
   width: 155px;
+}
+.galeria {
+  margin: 8x auto;
+  width: 950x;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
+}
+
+.foto {
+  position: absolute;
+  opacity: 0;
+  animation-name: animacao;
+  animation-duration: 20s;
+  animation-iteration-count: infinite;
+}
+@keyframes animacao {
+  25% {
+    opacity: 1;
+    transform: scale(1.1, 1.1);
+  }
+  50% {
+    opacity: 0;
+  }
+}
+.foto:nth-child(1) {
+  animation-delay: 2s;
+}
+.foto:nth-child(2) {
+  animation-delay: 5s;
+}
+.foto:nth-child(3) {
+  animation-delay: 10s;
+}
+.paragrafh {
+  font-weight: 900;
+  font-size: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: center;
+  margin-top: 90px;
+}
+
+.foo {
+  background-color: black;
 }
